--- a/stories/ca/0156_el-cocodril-afamat_slides.html
+++ b/stories/ca/0156_el-cocodril-afamat_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Lo que la hermana de Vusi dijo - Global African Storybook</title>
+  <title>El cocodril afamat - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="lo-que-la-hermana-de-vusi-dijo" class="slide level1">
-<h1>Lo que la hermana de Vusi dijo</h1>
+<section id="el-cocodril-afamat" class="slide level1">
+<h1>El cocodril afamat</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
-<p>Temprano en la mañana, la abuelita de Vusi le dijo, &quot;Vusi, por favor, lleva este huevo a tus padres. Ellos quieren hacer un pastel muy grande para la boda de tu hermana.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
+<p>Hi havia una vegada un cocodril que tenia molta gana.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
-<p>Cuando iba hacia la casa de sus padre, Vusi se encontró con dos chicos recogiendo frutas. Uno de los chicos le quitó el huevo a Vusi y lo lanzó a un árbol. El huevo se quebró.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
+<p>Buscava menjar molt lenta i silenciosament. Fins que...</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>&quot;¡¿Qué acabas de hacer?!&quot; Vusi le gritó. &quot;Ese huevo era para hacer el pastel de boda de mi hermana.&quot; ¿Qué dirá mi hermana cuando sepa que no habrá pastel de boda?&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
+<p>Zas! El cocodril ataca.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>Los chicos se disculparon por lo ocurrido. &quot;No te podemos ayudar con la pastel, pero este palo para caminar es un regalo para tu hermana,&quot; uno de los chicos dijo. Luego, Vusi siguió caminando.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
+<p>Després d'això, ja no té gana i està mot content.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>Mientras caminaba, se encontró con dos hombres que estaban construyendo una casa. &quot;¿Nos dejarías usar ese fuerte palo?&quot; uno de los hombres preguntó. Pero el palo no era lo suficientemente fuerte para trabajos de construcción, así que se quebró.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
+<p>Fins que torna a tenir gana de nou.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,84 +141,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>&quot;¿Qué acabas de hacer?&quot; Vusi gritó. &quot;Ese palo era un regalo para mi hermana. Los recolectores de fruta me lo dieron porque rompieron el huevo para el pastel de boda de mi hermana. Ahora, ni huevo, ni pastel, ni regalo habrá para su boda. ¡¿Qué dirá mi hermana?!&quot;</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>Los constructores se disculparon por haber roto el palo. &quot;No te podemos ayudar con la pastel, pero aquí tienes un poco de paja para tu hermana,&quot; uno de ellos dijo. Y así, Vusi continuó caminando.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>Ahora Vusi se encontró con un granjero y una vaca. &quot;¡Qué deliciosa paja! ¿Puedo comer un poquito?&quot; la vaca preguntó. Pero la paja estaba tan rica que la vaca se la comió toda.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>&quot;¿Qué acabas de hacer?&quot; Vusi gritó. &quot;Esa paja era un regalo para mi hermana. Los constructores me la dieron porque rompieron el palo de los recolectores de fruta. Los recolectores de fruta me regalaron el palo porque quebraron el huevo para el pastel de boda de mi hermana. Ahora, ni huevo, ni pastel, ni regalo habrá para su boda. ¡¿Qué dirá mi hermana?!&quot;</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
-<p>La vaca se disculpó por haber sido glotona. El granjero decidió regalarle la vaca a Vusi como un obsequio para la boda de su hermana. Y así pues, Vusi siguió caminando con la vaca.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
-<p>Pero la vaca se arrancó corriendo de vuelta donde el granjero a la hora de cenar. Vusi se perdió y llegó muy tarde a la boda de su hermana. Los invitados ya estaban comiendo.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>&quot;¿Qué puedo hacer ahora?&quot; Vusi dijo. &quot;La vaca que se arrancó corriendo era un regalo para sustituir la paja que los constructores me habían regalado. Los constructores me dieron la paja porque rompieron el palo de los recolectores de fruta. Los recolectores de fruta me regalaron el palo porque quebraron el huevo para el pastel de boda de mi hermana. Ahora, ni huevo, ni pastel, ni regalo habrá para la boda.&quot;</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>La hermana de Vusi se quedó pensativa por un momento y luego dijo: &quot;Vusi, hermano mío, no me interesan los regalos. ¡Ni siquiera me interesa el pastel de boda! Estamos todos reunidos y felices y yo estoy muy feliz también. ¡Ponte tu ropa elegante y celebremos!&quot; Y así pues, eso fue lo que Vusi hizo.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="lo-que-la-hermana-de-vusi-dijo-1">Lo que la hermana de Vusi dijo</h2>
-<strong>Texto:</strong> Nina Orange<br> <strong>Ilustración:</strong> Wiehan de Jager<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<h2 id="el-cocodril-afamat-1">El cocodril afamat</h2>
+<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Meritxell Castells<br> <strong>Language:</strong> Catalan<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-vusis-sister-said'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hungry-crocodile'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
