--- a/stories/es/0291_lo-que-la-hermana-de-vusi-dijo.html
+++ b/stories/es/0291_lo-que-la-hermana-de-vusi-dijo.html
@@ -70,7 +70,7 @@ Nina Orange<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>Los chicos se disculparon por lo ocurrido. “No te podemos ayudar con la torta, pero este palo para caminar es un regalo para tu hermana,” uno de los chicos dijo. Luego, Vusi siguió caminando.</p>
+<p>Los chicos se disculparon por lo ocurrido. “No te podemos ayudar con la pastel, pero este palo para caminar es un regalo para tu hermana,” uno de los chicos dijo. Luego, Vusi siguió caminando.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Nina Orange<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>Los constructores se disculparon por haber roto el palo. “No te podemos ayudar con la torta, pero aquí tienes un poco de paja para tu hermana,” uno de ellos dijo. Y así, Vusi continuó caminando.</p>
+<p>Los constructores se disculparon por haber roto el palo. “No te podemos ayudar con la pastel, pero aquí tienes un poco de paja para tu hermana,” uno de ellos dijo. Y así, Vusi continuó caminando.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
