--- a/stories/index.html
+++ b/stories/index.html
@@ -74,6 +74,7 @@
 <ul><li class="toc"><a href="#arabic">Arabic [العربية]</a></li><br>
 <li class="toc"><a href="#bengali">Bengali [বাংলা]</a></li><br>
 <li class="toc"><a href="#cantonese">Cantonese [粵語]</a></li><br>
+<li class="toc"><a href="#catalan">Catalan [Català]</a></li><br>
 <li class="toc"><a href="#chinese-mandarin">Chinese (Mandarin) [中文]</a></li><br>
 <li class="toc"><a href="#danish">Danish [dansk]</a></li><br>
 <li class="toc"><a href="#dutch">Dutch [Nederlands]</a></li><br>
@@ -795,6 +796,27 @@
       <td><a href="/stories/yue/0360_計吓貓貓_slides.html" target="_blank">計吓貓貓</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='catalan'>Catalan [Català]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/ca/0156_el-cocodril-afamat_slides.html" target="_blank">El cocodril afamat</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ca0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -5199,7 +5221,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
