--- a/stories/es/0324_el-día-que-dejé-mi-casa-para-irme-a-la-ciudad.html
+++ b/stories/es/0324_el-día-que-dejé-mi-casa-para-irme-a-la-ciudad.html
@@ -49,14 +49,14 @@ Lesley Koyi, Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
 
-<p>La pequeña parada de buses de mi aldea estaba llena de gente y de autobuses sobrecargados. En el suelo había aun más cosas por cargar. Los pregoneros anunciaban los lugares a los que iban sus buses.</p>
+<p>La pequeña parada de autobuses de mi aldea estaba llena de gente y de autobuses sobrecargados. En el suelo había aun más cosas por cargar. Los pregoneros anunciaban los lugares a los que iban sus autobuses.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p>“¡A la ciudad! ¡A la ciudad! ¡Bus hacia el oeste!” escuché que gritaba un pregonero. Ése era el bus que yo necesitaba tomar.</p>
+<p>“¡A la ciudad! ¡A la ciudad! ¡Autobús hacia el oeste!” escuché que gritaba un pregonero. Ése era el autobús que yo necesitaba tomar.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Lesley Koyi, Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
 
-<p>Miré por la ventana del bus y me di cuenta de que estaba dejando atrás mi aldea, el lugar donde había crecido. Ahora me iba a la gran ciudad.</p>
+<p>Miré por la ventana del autobús y me di cuenta de que estaba dejando atrás mi aldea, el lugar donde había crecido. Ahora me iba a la gran ciudad.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -105,28 +105,28 @@ Lesley Koyi, Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
 
-<p>Todo este ajetreo fue interrumpido por el claxon del bus, señal de que estábamos listos para partir. El pregonero gritó a los vendedores ambulantes para que se bajaran.</p>
+<p>Todo este ajetreo fue interrumpido por el claxon del autobús, señal de que estábamos listos para partir. El pregonero gritó a los vendedores ambulantes para que se bajaran.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
 
-<p>Los vendedores ambulantes se empujaban para salir del bus. Algunos le entregaron su cambio a los pasajeros. Otros intentaron vender productos por última vez.</p>
+<p>Los vendedores ambulantes se empujaban para salir del autobús. Algunos le entregaron su cambio a los pasajeros. Otros intentaron vender productos por última vez.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
 
-<p>Mientras el bus partía desde la estación, miré por la ventana. Me preguntaba si alguna vez volvería a mi aldea.</p>
+<p>Mientras el autobús partía desde la estación, miré por la ventana. Me preguntaba si alguna vez volvería a mi aldea.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
 
-<p>A medida que pasaba el tiempo, el bus se puso muy caluroso. Cerré los ojos con la esperanza de quedarme dormido.</p>
+<p>A medida que pasaba el tiempo, el autobús se puso muy caluroso. Cerré los ojos con la esperanza de quedarme dormido.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Lesley Koyi, Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>Nueve horas más tarde, desperté escuchando fuertes golpeteos y gritos llamando a los pasajeros que viajaban de vuelta a mi aldea. Tomé mi pequeño morral y me bajé del bus.</p>
+<p>Nueve horas más tarde, desperté escuchando fuertes golpeteos y gritos llamando a los pasajeros que viajaban de vuelta a mi aldea. Tomé mi pequeño morral y me bajé del autobús.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
 
-<p>El bus de vuelta a mi aldea se llenó rápidamente. Pronto empezaría su viaje de vuelta al este. Por ahora, lo más importante para mí era empezar a buscar la casa de mi tío.</p>
+<p>El autobús de vuelta a mi aldea se llenó rápidamente. Pronto empezaría su viaje de vuelta al este. Por ahora, lo más importante para mí era empezar a buscar la casa de mi tío.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
