--- a/stories/es/0324_el-día-que-dejé-mi-casa-para-irme-a-la-ciudad_slides.html
+++ b/stories/es/0324_el-día-que-dejé-mi-casa-para-irme-a-la-ciudad_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
-<p>La pequeña parada de buses de mi aldea estaba llena de gente y de autobuses sobrecargados. En el suelo había aun más cosas por cargar. Los pregoneros anunciaban los lugares a los que iban sus buses.</p>
+<p>La pequeña parada de autobuses de mi aldea estaba llena de gente y de autobuses sobrecargados. En el suelo había aun más cosas por cargar. Los pregoneros anunciaban los lugares a los que iban sus autobuses.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>&quot;¡A la ciudad! ¡A la ciudad! ¡Bus hacia el oeste!&quot; escuché que gritaba un pregonero. Ése era el bus que yo necesitaba tomar.</p>
+<p>&quot;¡A la ciudad! ¡A la ciudad! ¡Autobús hacia el oeste!&quot; escuché que gritaba un pregonero. Ése era el autobús que yo necesitaba tomar.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
-<p>Miré por la ventana del bus y me di cuenta de que estaba dejando atrás mi aldea, el lugar donde había crecido. Ahora me iba a la gran ciudad.</p>
+<p>Miré por la ventana del autobús y me di cuenta de que estaba dejando atrás mi aldea, el lugar donde había crecido. Ahora me iba a la gran ciudad.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
-<p>Todo este ajetreo fue interrumpido por el claxon del bus, señal de que estábamos listos para partir. El pregonero gritó a los vendedores ambulantes para que se bajaran.</p>
+<p>Todo este ajetreo fue interrumpido por el claxon del autobús, señal de que estábamos listos para partir. El pregonero gritó a los vendedores ambulantes para que se bajaran.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
-<p>Los vendedores ambulantes se empujaban para salir del bus. Algunos le entregaron su cambio a los pasajeros. Otros intentaron vender productos por última vez.</p>
+<p>Los vendedores ambulantes se empujaban para salir del autobús. Algunos le entregaron su cambio a los pasajeros. Otros intentaron vender productos por última vez.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
-<p>Mientras el bus partía desde la estación, miré por la ventana. Me preguntaba si alguna vez volvería a mi aldea.</p>
+<p>Mientras el autobús partía desde la estación, miré por la ventana. Me preguntaba si alguna vez volvería a mi aldea.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p>A medida que pasaba el tiempo, el bus se puso muy caluroso. Cerré los ojos con la esperanza de quedarme dormido.</p>
+<p>A medida que pasaba el tiempo, el autobús se puso muy caluroso. Cerré los ojos con la esperanza de quedarme dormido.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>Nueve horas más tarde, desperté escuchando fuertes golpeteos y gritos llamando a los pasajeros que viajaban de vuelta a mi aldea. Tomé mi pequeño morral y me bajé del bus.</p>
+<p>Nueve horas más tarde, desperté escuchando fuertes golpeteos y gritos llamando a los pasajeros que viajaban de vuelta a mi aldea. Tomé mi pequeño morral y me bajé del autobús.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
-<p>El bus de vuelta a mi aldea se llenó rápidamente. Pronto empezaría su viaje de vuelta al este. Por ahora, lo más importante para mí era empezar a buscar la casa de mi tío.</p>
+<p>El autobús de vuelta a mi aldea se llenó rápidamente. Pronto empezaría su viaje de vuelta al este. Por ahora, lo más importante para mí era empezar a buscar la casa de mi tío.</p>
 <center>
 <strong>16</strong>
 </center>
