--- a/stories/es/0089_khalai-le-habla-a-las-plantas.html
+++ b/stories/es/0089_khalai-le-habla-a-las-plantas.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p>Ella es Khalai. Tiene siete años. Su nombre significa ‘bondadosa’ en su idioma llamado Lubukusu.</p>
+<p>Ella es Khalai. Tiene siete años. Su nombre significa “bondadosa” en su idioma llamado Lubukusu.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
