--- a/stories/es/0141_el-pollo-y-el-milpiés_slides.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Luego, Mamá Milpiés escuchó una pequeña vocecita. &quot;Ayúdame, mamá!&quot; gritaba la vocecita. Mamá Milpiés miró para todos lados tratando de escuchar atentamente. La vocecita venía del interior del Pollo.</p>
+<p>Luego, Mamá Milpiés escuchó una pequeña vocecita. &quot;¡Ayúdame, mamá!&quot; gritaba la vocecita. Mamá Milpiés miró para todos lados tratando de escuchar atentamente. La vocecita venía del interior del Pollo.</p>
 <center>
 <strong>8</strong>
 </center>
