--- a/stories/yue/0066_羅姿卑妮同三條頭髮_slides.html
+++ b/stories/yue/0066_羅姿卑妮同三條頭髮_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>隻狗就話：“俾我煮飯！”羅姿卑妮答咗佢就話：“但係我從來都冇俾過隻狗煮飯喎。”隻狗就話：“快啲煮飯啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗煮啲嘢食啦。</p>
+<p>隻狗就話：“俾我煮飯！”羅姿卑妮答咗佢就話：“但係我從來都冇試過俾隻狗煮飯喎。”隻狗就話：“快啲煮飯啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗煮啲嘢食啦。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>狗就話：“俾我鋪床！”羅姿卑妮答咗佢就話：“但係我從來都冇俾過隻狗鋪床喎。”隻狗就話：“快啲鋪床啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗鋪床啦。</p>
+<p>狗就話：“俾我鋪床！”羅姿卑妮答咗佢就話：“但係我從來都冇試過俾隻狗鋪床喎。”隻狗就話：“快啲鋪床啦，唔係我就咬你！”羅姿卑妮冇辦法，唯有俾隻狗鋪床啦。</p>
 <center>
 <strong>9</strong>
 </center>
