--- a/stories/es/0089_khalai-le-habla-a-las-plantas_slides.html
+++ b/stories/es/0089_khalai-le-habla-a-las-plantas_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>Ella es Khalai. Tiene siete años. Su nombre significa 'bondadosa' en su idioma llamado Lubukusu.</p>
+<p>Ella es Khalai. Tiene siete años. Su nombre significa &quot;bondadosa&quot; en su idioma llamado Lubukusu.</p>
 <center>
 <strong>1</strong>
 </center>
