--- a/stories/es/0141_el-pollo-y-el-milpiés.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés.html
@@ -98,7 +98,7 @@ Winny Asara<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>Luego, Mamá Milpiés escuchó una pequeña vocecita. “Ayúdame, mamá!” gritaba la vocecita. Mamá Milpiés miró para todos lados tratando de escuchar atentamente. La vocecita venía del interior del Pollo.</p>
+<p>Luego, Mamá Milpiés escuchó una pequeña vocecita. “¡Ayúdame, mamá!” gritaba la vocecita. Mamá Milpiés miró para todos lados tratando de escuchar atentamente. La vocecita venía del interior del Pollo.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
