--- a/stories/index.html
+++ b/stories/index.html
@@ -3453,6 +3453,12 @@
       <td><a name="pl0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/pl/0243_wakacje-u-babci_slides.html" target="_blank">Wakacje u babci</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/pl/0253_moja-książka-z-obrazkami_slides.html" target="_blank">Moja książka z obrazkami</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3463,6 +3469,18 @@
       <td><a href="/stories/pl/0271_para_slides.html" target="_blank">Para</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/pl/0291_słowa-siostry-vusi_slides.html" target="_blank">Słowa siostry Vusi</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/pl/0294_babcine-banany_slides.html" target="_blank">Babcine banany</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -5323,7 +5341,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -5377,7 +5395,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -5389,7 +5407,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
