--- a/stories/pl/0243_wakacje-u-babci.html
+++ b/stories/pl/0243_wakacje-u-babci.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>De vacaciones con la abuela</title>
+    <title>Wakacje u babci</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,151 +43,151 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 
-<h1 id="de-vacaciones-con-la-abuela">De vacaciones con la abuela</h1>
+<h1 id="wakacje-u-babci">Wakacje u babci</h1>
 
-Violet Otieno<br>Español</div><div class="pagebreak">
+Violet Otieno<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
 
-<p>Odongo y Apiyo vivían en la ciudad con su padre. Esperaban con ansias sus vacaciones. No sólo porque cerraban la escuela, sino porque iban a visitar a su abuela. Ella vivía en una aldea de pescadores cerca de un gran lago.</p>
+<p>Ondogo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacji. I to nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
 
-<p>Odongo y Apiyo estaban emocionadas con la idea de visitar de nuevo a su abuela. La noche antes del viaje, empacaron sus cosas y dejaron todo listo para irse a la aldea. No pudieron dormir y se quedaron toda la noche hablando sobre sus vacaciones.</p>
+<p>Ondogo i Apiyo byli tak przejęci wyjazdem do babci, że nie mogli zasnąć. Poprzedniego wieczora spakowali się i przygotowali na podróż. Całą noc planowali co będą robić u babci.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
 
-<p>Temprano a la mañana siguiente, salieron de viaje a la aldea en el auto de su padre. Pasaron por las montañas y vieron animales salvajes y plantaciones de té. Contaron autos y cantaron canciones.</p>
+<p>Wcześnie rano pojechali autem taty i jadąc mijali góry, dzikie zwierzęta oraz plantacje herbaty. Po drodze liczyli auta, które ich mijały i śpiewali piosenki.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
 
-<p>Al poco tiempo, se cansaron y se quedaron dormidos.</p>
+<p>Po pewnym czasie dzieci zmęczyły się i zasnęły.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>El padre despertó a Odongo y Apiyo cuando llegaron a la aldea. Se encontraron a su abuela, Nyar-Kanyada, descansando con una manta debajo de un árbol. Nyar-Kanyada significa “hija de la gente de Kanyada” en el idioma Luo. La abuela era una mujer fuerte y hermosa.</p>
+<p>Tata obudził Ondogo i Apiyo, gdy dotarli na miejsce. Babcia: Nyar-Kanyada odpoczywała na macie pod drzewem. Nyae Kanyada w Luo oznacza: córka ludu Kanyada. Była piękną i silną kobietą.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>Nyar-Kanyada les dio la bienvenida a su casa, bailando y cantando de alegría. Sus nietos estaban ansiosos por entregarle los regalos que le trajeron de la ciudad. “Abre mi regalo primero,” dijo Odongo. “¡No, mi regalo primero!” dijo Apiyo.</p>
+<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!” - krzyknął Ondogo. „Nie, najpierw mój!” - przekrzykiwał go Apiyo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
 
-<p>Después de abrir los regalos, Nyar-Kanyada le dio la bendición tradicional a sus nietos.</p>
+<p>Po otworzeniu prezentów, Nyar-Kanyada pobłogosławiła wnuki według tradycji.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
 
-<p>Después, Odongo y Apiyo salieron a jugar. Persiguieron mariposas y aves.</p>
+<p>Potem Ondongo i Apiyo udali się na zewnątrz i bawili się ganiając motyle i ptaki.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
 
-<p>Escalaron árboles y chapotearon en el lago.</p>
+<p>Wspinali się po drzewach i chlapali wodą z jeziora.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
 
-<p>Cuando oscureció, volvieron a la casa a cenar. ¡Se estaban quedando dormidos antes de terminar de comer!</p>
+<p>Po zmroku wrócili do domu na kolację i zanim skończyli jeść już usypiali!</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
 
-<p>Al día siguiente, el padre de los niños se fue de vuelta a la ciudad y los dejó con Nyar-Kanyada.</p>
+<p>Następnego dnia ich ojciec wrócił do miasta zostawiając swoje dzieci z babcią Nyar-Kanyada.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
 
-<p>Odongo y Apiyo ayudaron a su abuela con las tareas del hogar. Fueron a buscar agua y leña. Recolectaron los huevos de las gallinas y recolectaron verduras de la huerta.</p>
+<p>Ondogo i Apiyo pomogli babci w pracach  wokół domu. Przynieśli wodę i drewno na ogień. Zebrali jajka od kur i zebrali warzywa z ogrodu.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
 
-<p>Nyar-Kanyada le enseñó a sus nietos a hacer ugali para comer con estofado. Les enseñó a hacer arroz con coco para comerlo con pescado asado.</p>
+<p>Nyar-Kanyada nauczyła wnuki jak przyrządzić delikatne ugali, aby jeść je z gulaszem. Pokazała im też jak zrobić ryż kokosowy z pieczoną rybą.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
 
-<p>Una mañana, Odongo llevó a las vacas de su abuela a pastar. Pero las vacas entraron en la granja de un vecino. El vecino se enojó con Odongo. Lo amenazó con quedarse con las vacas por haberse comido sus cultivos. Después de ese día, Odongo se aseguró que las vacas no se volvieran a meter en problemas.</p>
+<p>Pewnego ranka, Ondogo zabrał babci krowę na pole sąsiada. Sąsiad nie był z tego zadowolny, i zabronił Ondogo przyprowadzać tutaj krowę, bo zjadała mu jego rośliny uprawne. Od tej pory chłopiec upewnił się, aby krowa już tutaj nie wróciła.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
 
-<p>Otro día, los niños fueron al mercado con Nyar-Kanyada. Ella tenía un puesto para vender vegetales, azúcar y jabón. A Apiyo le gustaba decirle a los clientes cuánto costaban los productos. Odongo empacaba los productos para los clientes.</p>
+<p>Innego dnia dzieci udały się z babcią na targ. Babcia sprzedawała warzywa, cukier i mydło. Apiyo lubił mówić klientom ile co kosztuje, gdy Ondogo pakował produkty kupione przez ludzi.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
 
-<p>Al final del día, tomaban té juntos. Le ayudaban a su abuela a contar cuánto dinero había ganado.</p>
+<p>Na koniec dnia pili razem herbatę chai i pomogli babci policzyć pieniądze, które zarobiła.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
 
-<p>Pero las vacaciones se terminaron muy rápido y los niños tuvieron que regresar a la ciudad. Nyar-Kanyada le regaló una gorra a Odongo y un chaleco a Apiyo. Luego les empacó comida para su viaje de vuelta a casa.</p>
+<p>Niestety zbyt szybko wakacje kończyły się i dzieci musiały wracać do miasta. Nyar-Kanyada dała Ondogo czapkę, a Apiyo sweter. Spakowała im też jedzienie na drogę.</p>
 
 <div class="pagenum">17</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
 
-<p>Cuando su padre vino a recogerlos, no querían irse. Los niños le suplicaron a Nyar-Kanyada que se fuera con ellos a la ciudad. Ella sonrió y les dijo: “Estoy muy vieja para la ciudad. Estaré esperándolos cuando vuelvan a mi aldea otra vez.”</p>
+<p>Kiedy ich ojciec przybył, aby je zabrać - dzieci nie chciały wyjeżdżać. Dzieci błagały Nyar-Kanyada, aby dołączyła do nich i wróciła z nimi do miasta. Ale babcia tylko uśmiechnęła się i rzekła: „Jestem za stara na życie w mieście. Będę na was czekała, do waszej następnej wizyty.”</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
 
-<p>Odongo y Apiyo le dieron un abrazo muy apretado y le dijeron adiós.</p>
+<p>Ondogo i Apiyo oboje mocno uścinęli babcię na pożegnanie.</p>
 
 <div class="pagenum">19</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
 
-<p>Cuando Odongo y Apiyo volvieron a la escuela, le hablaron a sus amigos acerca de la vida en la aldea. Algunos niños opinaron que la vida en la ciudad era buena. Otros opinaron que la aldea era mejor. ¡Pero lo más importante es que todos opinaron que Odongo y Apiyo tenían una abuela maravillosa!</p>
+<p>Gdy Ondogo i Apiyo wrócili do szkoły opowiedzieli swoim kolegom i koleżankom o wiosce. Niektóre dzieci lubiły życie w mieście. Inni myśleli, że wioska jest lepsza. Ale najważniejsze jest to, że wszyscy zgodnie uznali, że babcia Ondogo i Apiyo jest wspaniała!</p>
 
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Texto:</strong> Violet Otieno<br /><strong>Ilustración:</strong> Catherine Groenewald<br /><strong>Traducción:</strong> Karina Vásquez<br /><strong>Idioma:</strong> Español</p>
+<p><strong>Text:</strong> Violet Otieno<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> Polish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/holidays-grandmother">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
