--- a/stories/pl/0243_wakacje-u-babci_slides.html
+++ b/stories/pl/0243_wakacje-u-babci_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>De vacaciones con la abuela - Global African Storybook</title>
+  <title>Wakacje u babci - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="de-vacaciones-con-la-abuela" class="slide level1">
-<h1>De vacaciones con la abuela</h1>
+<section id="wakacje-u-babci" class="slide level1">
+<h1>Wakacje u babci</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo y Apiyo vivían en la ciudad con su padre. Esperaban con ansias sus vacaciones. No sólo porque cerraban la escuela, sino porque iban a visitar a su abuela. Ella vivía en una aldea de pescadores cerca de un gran lago.</p>
+<p>Ondogo i Apiyo mieszkali z ojcem w mieście. Nie mogli doczekać się wakacji. I to nie tylko dlatego, że w wakacje szkoła była zamknięta, ale przede wszystkim dlatego, że jechali odwiedzić babcię. Babcia mieszkała w wiosce rybackiej nieopodal jeziora.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo y Apiyo estaban emocionadas con la idea de visitar de nuevo a su abuela. La noche antes del viaje, empacaron sus cosas y dejaron todo listo para irse a la aldea. No pudieron dormir y se quedaron toda la noche hablando sobre sus vacaciones.</p>
+<p>Ondogo i Apiyo byli tak przejęci wyjazdem do babci, że nie mogli zasnąć. Poprzedniego wieczora spakowali się i przygotowali na podróż. Całą noc planowali co będą robić u babci.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Temprano a la mañana siguiente, salieron de viaje a la aldea en el auto de su padre. Pasaron por las montañas y vieron animales salvajes y plantaciones de té. Contaron autos y cantaron canciones.</p>
+<p>Wcześnie rano pojechali autem taty i jadąc mijali góry, dzikie zwierzęta oraz plantacje herbaty. Po drodze liczyli auta, które ich mijały i śpiewali piosenki.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>Al poco tiempo, se cansaron y se quedaron dormidos.</p>
+<p>Po pewnym czasie dzieci zmęczyły się i zasnęły.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>El padre despertó a Odongo y Apiyo cuando llegaron a la aldea. Se encontraron a su abuela, Nyar-Kanyada, descansando con una manta debajo de un árbol. Nyar-Kanyada significa &quot;hija de la gente de Kanyada&quot; en el idioma Luo. La abuela era una mujer fuerte y hermosa.</p>
+<p>Tata obudził Ondogo i Apiyo, gdy dotarli na miejsce. Babcia: Nyar-Kanyada odpoczywała na macie pod drzewem. Nyae Kanyada w Luo oznacza: córka ludu Kanyada. Była piękną i silną kobietą.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada les dio la bienvenida a su casa, bailando y cantando de alegría. Sus nietos estaban ansiosos por entregarle los regalos que le trajeron de la ciudad. &quot;Abre mi regalo primero,&quot; dijo Odongo. &quot;¡No, mi regalo primero!&quot; dijo Apiyo.</p>
+<p>Nyar-Kanyada powitała ich w swoim domu tańcząc i śpiewając z radości. Jej wnuki były szczęśliwe, gdy wręczały jej podarunki z miasta. „Najpierw otwórz mój prezent!&quot; - krzyknął Ondogo. „Nie, najpierw mój!&quot; - przekrzykiwał go Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>Después de abrir los regalos, Nyar-Kanyada le dio la bendición tradicional a sus nietos.</p>
+<p>Po otworzeniu prezentów, Nyar-Kanyada pobłogosławiła wnuki według tradycji.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>Después, Odongo y Apiyo salieron a jugar. Persiguieron mariposas y aves.</p>
+<p>Potem Ondongo i Apiyo udali się na zewnątrz i bawili się ganiając motyle i ptaki.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>Escalaron árboles y chapotearon en el lago.</p>
+<p>Wspinali się po drzewach i chlapali wodą z jeziora.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>Cuando oscureció, volvieron a la casa a cenar. ¡Se estaban quedando dormidos antes de terminar de comer!</p>
+<p>Po zmroku wrócili do domu na kolację i zanim skończyli jeść już usypiali!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Al día siguiente, el padre de los niños se fue de vuelta a la ciudad y los dejó con Nyar-Kanyada.</p>
+<p>Następnego dnia ich ojciec wrócił do miasta zostawiając swoje dzieci z babcią Nyar-Kanyada.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo y Apiyo ayudaron a su abuela con las tareas del hogar. Fueron a buscar agua y leña. Recolectaron los huevos de las gallinas y recolectaron verduras de la huerta.</p>
+<p>Ondogo i Apiyo pomogli babci w pracach wokół domu. Przynieśli wodę i drewno na ogień. Zebrali jajka od kur i zebrali warzywa z ogrodu.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Nyar-Kanyada le enseñó a sus nietos a hacer ugali para comer con estofado. Les enseñó a hacer arroz con coco para comerlo con pescado asado.</p>
+<p>Nyar-Kanyada nauczyła wnuki jak przyrządzić delikatne ugali, aby jeść je z gulaszem. Pokazała im też jak zrobić ryż kokosowy z pieczoną rybą.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Una mañana, Odongo llevó a las vacas de su abuela a pastar. Pero las vacas entraron en la granja de un vecino. El vecino se enojó con Odongo. Lo amenazó con quedarse con las vacas por haberse comido sus cultivos. Después de ese día, Odongo se aseguró que las vacas no se volvieran a meter en problemas.</p>
+<p>Pewnego ranka, Ondogo zabrał babci krowę na pole sąsiada. Sąsiad nie był z tego zadowolny, i zabronił Ondogo przyprowadzać tutaj krowę, bo zjadała mu jego rośliny uprawne. Od tej pory chłopiec upewnił się, aby krowa już tutaj nie wróciła.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>Otro día, los niños fueron al mercado con Nyar-Kanyada. Ella tenía un puesto para vender vegetales, azúcar y jabón. A Apiyo le gustaba decirle a los clientes cuánto costaban los productos. Odongo empacaba los productos para los clientes.</p>
+<p>Innego dnia dzieci udały się z babcią na targ. Babcia sprzedawała warzywa, cukier i mydło. Apiyo lubił mówić klientom ile co kosztuje, gdy Ondogo pakował produkty kupione przez ludzi.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Al final del día, tomaban té juntos. Le ayudaban a su abuela a contar cuánto dinero había ganado.</p>
+<p>Na koniec dnia pili razem herbatę chai i pomogli babci policzyć pieniądze, które zarobiła.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Pero las vacaciones se terminaron muy rápido y los niños tuvieron que regresar a la ciudad. Nyar-Kanyada le regaló una gorra a Odongo y un chaleco a Apiyo. Luego les empacó comida para su viaje de vuelta a casa.</p>
+<p>Niestety zbyt szybko wakacje kończyły się i dzieci musiały wracać do miasta. Nyar-Kanyada dała Ondogo czapkę, a Apiyo sweter. Spakowała im też jedzienie na drogę.</p>
 <center>
 <strong>17</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Cuando su padre vino a recogerlos, no querían irse. Los niños le suplicaron a Nyar-Kanyada que se fuera con ellos a la ciudad. Ella sonrió y les dijo: &quot;Estoy muy vieja para la ciudad. Estaré esperándolos cuando vuelvan a mi aldea otra vez.&quot;</p>
+<p>Kiedy ich ojciec przybył, aby je zabrać - dzieci nie chciały wyjeżdżać. Dzieci błagały Nyar-Kanyada, aby dołączyła do nich i wróciła z nimi do miasta. Ale babcia tylko uśmiechnęła się i rzekła: „Jestem za stara na życie w mieście. Będę na was czekała, do waszej następnej wizyty.&quot;</p>
 <center>
 <strong>18</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo y Apiyo le dieron un abrazo muy apretado y le dijeron adiós.</p>
+<p>Ondogo i Apiyo oboje mocno uścinęli babcię na pożegnanie.</p>
 <center>
 <strong>19</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Cuando Odongo y Apiyo volvieron a la escuela, le hablaron a sus amigos acerca de la vida en la aldea. Algunos niños opinaron que la vida en la ciudad era buena. Otros opinaron que la aldea era mejor. ¡Pero lo más importante es que todos opinaron que Odongo y Apiyo tenían una abuela maravillosa!</p>
+<p>Gdy Ondogo i Apiyo wrócili do szkoły opowiedzieli swoim kolegom i koleżankom o wiosce. Niektóre dzieci lubiły życie w mieście. Inni myśleli, że wioska jest lepsza. Ale najważniejsze jest to, że wszyscy zgodnie uznali, że babcia Ondogo i Apiyo jest wspaniała!</p>
 <center>
 <strong>20</strong>
 </center>
@@ -276,8 +276,8 @@
 </section>
 <section class="slide level1">
 
-<h2 id="de-vacaciones-con-la-abuela-1">De vacaciones con la abuela</h2>
-<strong>Texto:</strong> Violet Otieno<br> <strong>Ilustración:</strong> Catherine Groenewald<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<h2 id="wakacje-u-babci-1">Wakacje u babci</h2>
+<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
