--- a/stories/pl/0294_babcine-banany_slides.html
+++ b/stories/pl/0294_babcine-banany_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>De vacaciones con la abuela - Global African Storybook</title>
+  <title>Babcine banany - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="de-vacaciones-con-la-abuela" class="slide level1">
-<h1>De vacaciones con la abuela</h1>
+<section id="babcine-banany" class="slide level1">
+<h1>Babcine banany</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo y Apiyo vivían en la ciudad con su padre. Esperaban con ansias sus vacaciones. No sólo porque cerraban la escuela, sino porque iban a visitar a su abuela. Ella vivía en una aldea de pescadores cerca de un gran lago.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>Ogród babci był wspaniały, pełen sorgo, proso, manioki. Jednak najlepsze były banany. I mimo, że babcia miała wiele wnucząt, czułam, że byłam jej ulubienicą. Często zapraszała mnie do domu. Ale był jeden sekret, którym się ze mną nie podzieliła: gdzie dojrzewały banany.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo y Apiyo estaban emocionadas con la idea de visitar de nuevo a su abuela. La noche antes del viaje, empacaron sus cosas y dejaron todo listo para irse a la aldea. No pudieron dormir y se quedaron toda la noche hablando sobre sus vacaciones.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>Pewnego dnia zauważyłam duży słomiany kosz stojący w słońcu na zewnątrz. Kiedy zapytałam co tam jest, babcia tylko powiedziała, że jest to magiczny kosz. Obok kosza było kilka liści bananowca, które babcia obracała od czasu do czasu. Byłam ciekawa: „po co te liście babciu?&quot; Jedyne co babcia odpowiadała to: „to moje magiczne liście.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Temprano a la mañana siguiente, salieron de viaje a la aldea en el auto de su padre. Pasaron por las montañas y vieron animales salvajes y plantaciones de té. Contaron autos y cantaron canciones.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>Oglądanie babci z bananami, z liśćmi i z dużym słomianym koszem było intrygujące. Ale babcia wysłała mnie do mamy. „Babciu, proszę pozwól mi patrzeć jak przygotowujesz...&quot; „Nie bądź uparta dziecko, zrób jak mówię.&quot; - rozkazała babcia. Postanowiłam biec.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>Al poco tiempo, se cansaron y se quedaron dormidos.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>Kiedy wróćiłam, babcia siedziała na zewnątrz, ale nie było ani kosza ani bananów. „Babciu - gdzie jest słomiany kosz, gdzie są wszystkie banany i gdzie...&quot; Ale jedyna odpowiedź jaką otrzymałam to: „Wszystko jest w moim magicznym miejscu&quot;. Co za rozczarowanie!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>El padre despertó a Odongo y Apiyo cuando llegaron a la aldea. Se encontraron a su abuela, Nyar-Kanyada, descansando con una manta debajo de un árbol. Nyar-Kanyada significa &quot;hija de la gente de Kanyada&quot; en el idioma Luo. La abuela era una mujer fuerte y hermosa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>Dwa dni później babcia wysłała mnie po laskę do jej sypialni. Gdy tylko otworzyłam drzwi, uderzył mnie silny zapach dojrzałych bananów. W środku był słomiany kosz schowany pod starym kocem. Gdy uniosłam koc poczułam ten cudowny zapach.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada les dio la bienvenida a su casa, bailando y cantando de alegría. Sus nietos estaban ansiosos por entregarle los regalos que le trajeron de la ciudad. &quot;Abre mi regalo primero,&quot; dijo Odongo. &quot;¡No, mi regalo primero!&quot; dijo Apiyo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>Głos babci przestraszył mnie kiedy mnie zawołała: „Co tam robisz? Pospiesz się i przynieś mi laskę.&quot; Posłusznie przyniosłam babci laskę. „Co się tak cieszysz?&quot; - zapytała babcia. Jej pytanie uświadomiło mi, że uśmiechałam się, bo odkryłam jej magiczne miejsce.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>Después de abrir los regalos, Nyar-Kanyada le dio la bendición tradicional a sus nietos.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>Na drugi dzień kiedy babcia przyszła odwiedzić moją mamę, pobiegłam do domu babci, aby jeszcze raz zobaczyć banany. Była tam wiązanka dojrzałych bananów - schowałam jednego banana w mojej sukience. Po tym jak przykryłam słomiany kosz poszłam za dom i szybko go zjadłam. Był to najpyszniejszy banan jaki kiedykolwiek jadłam.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>Después, Odongo y Apiyo salieron a jugar. Persiguieron mariposas y aves.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>Kolejnego dnia, kiedy babcia pracowała w ogrodzie, znów się wymknęłam, aby zajrzeć do bananów. Prawie wszystkie były dojrzałe. Nie mogłam się oprzeć i wzięłam cztery. Usłyszałam babcię więc prędko schowałam je w sukience.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>Escalaron árboles y chapotearon en el lago.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>Następnego dnia był dzień targowy. Babcia wstała wcześnie rano. Zawsze zabierała dojrzałe banany i maniok, aby sprzedać je na targu. Nie spieszyłam się, aby ją dziś odwiedzić, ale nie mogłam też unikać jej zbyt długo.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>Cuando oscureció, volvieron a la casa a cenar. ¡Se estaban quedando dormidos antes de terminar de comer!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>Tego wieczoru zostałam wezwana przez mamę, tatę i babcię. Wiedziałam o co chodzi. Tej nocy, gdy zasypiałam zrozumiałam, że nigdy więcej nie będę już kradła ani od babci ani od rodziców ani od nikogo.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,102 +186,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Al día siguiente, el padre de los niños se fue de vuelta a la ciudad y los dejó con Nyar-Kanyada.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo y Apiyo ayudaron a su abuela con las tareas del hogar. Fueron a buscar agua y leña. Recolectaron los huevos de las gallinas y recolectaron verduras de la huerta.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Nyar-Kanyada le enseñó a sus nietos a hacer ugali para comer con estofado. Les enseñó a hacer arroz con coco para comerlo con pescado asado.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Una mañana, Odongo llevó a las vacas de su abuela a pastar. Pero las vacas entraron en la granja de un vecino. El vecino se enojó con Odongo. Lo amenazó con quedarse con las vacas por haberse comido sus cultivos. Después de ese día, Odongo se aseguró que las vacas no se volvieran a meter en problemas.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>Otro día, los niños fueron al mercado con Nyar-Kanyada. Ella tenía un puesto para vender vegetales, azúcar y jabón. A Apiyo le gustaba decirle a los clientes cuánto costaban los productos. Odongo empacaba los productos para los clientes.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Al final del día, tomaban té juntos. Le ayudaban a su abuela a contar cuánto dinero había ganado.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Pero las vacaciones se terminaron muy rápido y los niños tuvieron que regresar a la ciudad. Nyar-Kanyada le regaló una gorra a Odongo y un chaleco a Apiyo. Luego les empacó comida para su viaje de vuelta a casa.</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Cuando su padre vino a recogerlos, no querían irse. Los niños le suplicaron a Nyar-Kanyada que se fuera con ellos a la ciudad. Ella sonrió y les dijo: &quot;Estoy muy vieja para la ciudad. Estaré esperándolos cuando vuelvan a mi aldea otra vez.&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo y Apiyo le dieron un abrazo muy apretado y le dijeron adiós.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Cuando Odongo y Apiyo volvieron a la escuela, le hablaron a sus amigos acerca de la vida en la aldea. Algunos niños opinaron que la vida en la ciudad era buena. Otros opinaron que la aldea era mejor. ¡Pero lo más importante es que todos opinaron que Odongo y Apiyo tenían una abuela maravillosa!</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="de-vacaciones-con-la-abuela-1">De vacaciones con la abuela</h2>
-<strong>Texto:</strong> Violet Otieno<br> <strong>Ilustración:</strong> Catherine Groenewald<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<h2 id="babcine-banany-1">Babcine banany</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
