--- a/stories/index.html
+++ b/stories/index.html
@@ -2223,6 +2223,12 @@
       <td><a name="ja0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/ja/0002_動物たちを見てごらん_slides.html" target="_blank">動物たちを見てごらん</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/ja/0008_なにしてるの_slides.html" target="_blank">なにしてるの？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4939,7 +4945,7 @@
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#it0002">it</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
